<resources>
    <string name="app_name">EspNaturales</string>
    <string name="str_busqueda">Busqueda</string>
    <string name="str_infor">Información</string>
    <string name="strLista">Lista de Espacios</string>
    <string name="rellena">Rellena</string>
    <string name="str_comunidades">Comunidades</string>
    <string name="tipos_espacio">Tipos Espacio</string>
    <string name="mapa">Mapa</string>
    <string name="buscar">Buscar</string>
    <string name="str_reservas">Reservas en España</string>
    <string name="str_rsvbios">Reservas de la Biosfera</string>
    <string name="str_clasi_resetr">Clasificación de Reservas</string>
    <string name="btnTodas">Lista de todas las Reservas</string>
    <string name="btnComunidad">Busqueda por Comunidad</string>
    <string name="btnTipos">Busqueda por Tipo</string>
    <string name="btnCombinada">Busqueda por Tipo y Comunidad</string>
    <string name="str_informes">Informes</string>
    <string name="ubicacion">Ubicación</string>
    <string name="descripcion">Descripción</string>
    <string name="google_maps_key">AIzaSyAr_J9oMum7hBMvBDqu0WmntnEfyEikyAU</string>
    <string name="url">URL</string>
</resources>
